--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,36 +26,40 @@
  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
  EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
- .parcoords > canvas {
-    font: 14px sans-serif;
-    position: absolute;
-  }
-  .parcoords > canvas {
-    pointer-events: none;
-  }
-  .parcoords text.label {
-    cursor: default;
-  }
-  .parcoords rect.background:hover {
-    fill: rgba(120,120,120,0.2);
-  }
-  .parcoords canvas {
-    opacity: 1;
-    transition: opacity 0.3s;
-    -moz-transition: opacity 0.3s;
-    -webkit-transition: opacity 0.3s;
-    -o-transition: opacity 0.3s;
-  }
-  .parcoords canvas.faded {
-    opacity: 0.25;
-  }
-  .parcoords {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: white;
-  }
-  
+.parcoords > canvas {
+  font: 11px sans-serif;
+  position: absolute;
+}
+.parcoords > canvas {
+  pointer-events: none;
+}
+.parcoords text.label { 
+  font-size: 12px; 
+  color: "#999999"; 
+}
+.parcoords rect.background:hover {
+  fill: rgba(120,120,120,0.2);
+}
+.parcoords canvas {
+  opacity: 1;
+  transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+}
+.parcoords canvas.faded {
+  opacity: 0.25;
+}
+.parcoords {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: white;
+}
+
+.tick text {
+  font-size: 11px;
+}
