--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,15 +8,31 @@
 .seperator {
   width: 100%;
   background-color: #888b8D;
-  height: 50px;
+  
   color: white;
   padding-left: 15px;
-  font-size: 30px;
+  font-size: 4vmin;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   line-height: 1.6em;
+  padding-bottom: 2vh;
 }
 
+.project_grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 10px;
+  grid-template-rows: 30% 30% 30%;
+}
+.project_card{
+    margin: 10px auto;
+    border: 1px #999 solid;
+    box-shadow: 3px 3px 2px #999;
+    padding: 10px;
+    width: 250px;
+    height: 250px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .parcoords > canvas {
   font: 11px sans-serif;
   position: absolute;
