--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,16 +5,21 @@
   font: 11px sans-serif;
   position: absolute;
 }
+
 .parcoords > canvas {
   pointer-events: none;
 }
+
 .parcoords text.label { 
-  font-size: 12px; 
-  color: "#999999"; 
+  font-size: 13.5px;  
+  margin-bottom: 1rem;
+  color: #999; 
 }
+
 .parcoords rect.background:hover {
   fill: rgba(120,120,120,0.2);
 }
+
 .parcoords canvas {
   opacity: 1;
   transition: opacity 0.3s;
@@ -22,9 +27,11 @@
   -webkit-transition: opacity 0.3s;
   -o-transition: opacity 0.3s;
 }
+
 .parcoords canvas.faded {
   opacity: 0.25;
 }
+
 .parcoords {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
